Fix Featured Image alignment so that the block and the image are centered.

--- a/style.css
+++ b/style.css
@@ -572,12 +572,8 @@ Content
 .entry-featured-image {
   /* Use `calc()` to number convert to pixels. */
   max-width: calc(1px * var(--wp--custom--content--wide-width));
-}
-
-/* The featured image block wraps the image in a paragraph without a class. */
-/* Center this paragraph so that smaller featured images are aligned in the middle. */
-.entry-featured-image p {
-  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .wp-block-post-content.wp-block,
